-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 13
-
Component/s: client-libs
-
b14
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8231875 | 11.0.6 | Volker Simonis | P3 | Resolved | Fixed | b01 |
It appears that Xinerama and Xrender support has never ever been functional on AIX.
The fixed version can be tested as follows:
Simulate a multi-screen environment on my Linux box with Xephyr:
$ Xephyr +xinerama -screen 1024x768 -screen 1024x768+1024+0 -ac -listen tcp :1
Started a Swing application from AIX where you redirect the DISPLAY to myhost:1:
$ DISPLAY=myhost:1 ./images/jdk/bin/java -showversion -Dsun.awt.nativedebug=true -Dawtdebug.trace=true -Dawtdebug.on=true -Dawtdebug.ctrace=true -cp ~/Java HelloSwing
The various debug properties will lead to the following output:
openjdk version "13-internal" 2019-09-17
OpenJDK Runtime Environment (slowdebug build 13-internal+0-adhoc.xxx.jdk-jdk)
OpenJDK 64-Bit Server VM (slowdebug build 13-internal+0-adhoc.xxx.jdk-jdk, mixed mode)
Xinerama extension is available
calling XineramaQueryScreens func
Enabling Xinerama support
num screens = 2
allocating 2 screens
The Swing frame will appear on one of the Xinerama screens and can be move with the mouse between the two available screens.
The fixed version can be tested as follows:
Simulate a multi-screen environment on my Linux box with Xephyr:
$ Xephyr +xinerama -screen 1024x768 -screen 1024x768+1024+0 -ac -listen tcp :1
Started a Swing application from AIX where you redirect the DISPLAY to myhost:1:
$ DISPLAY=myhost:1 ./images/jdk/bin/java -showversion -Dsun.awt.nativedebug=true -Dawtdebug.trace=true -Dawtdebug.on=true -Dawtdebug.ctrace=true -cp ~/Java HelloSwing
The various debug properties will lead to the following output:
openjdk version "13-internal" 2019-09-17
OpenJDK Runtime Environment (slowdebug build 13-internal+0-adhoc.xxx.jdk-jdk)
OpenJDK 64-Bit Server VM (slowdebug build 13-internal+0-adhoc.xxx.jdk-jdk, mixed mode)
Xinerama extension is available
calling XineramaQueryScreens func
Enabling Xinerama support
num screens = 2
allocating 2 screens
The Swing frame will appear on one of the Xinerama screens and can be move with the mouse between the two available screens.
- backported by
-
JDK-8231875 [AIX] Fix basic Xinerama and Xrender functionality
-
- Resolved
-