8220528: [AIX] Fix basic Xinerama and Xrender functionality

Reviewed-by: clanger, stuefe, serb